# LLM-in-a-loop

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
scripts/: evaluate.py  evaluate_ragas.py  seed_data.py
src/: __init__.py
src/agents/: __init__.py  critic.py  graph.py  planner.py  retriever.py  state.py
src/api/: __init__.py  dependencies.py  main.py  middleware.py
src/api/routes/: chat.py  health.py  ingest.py
src/client/: app.py  workspace.css
src/config/: settings.py
src/ingestion/: __init__.py  chunker.py  embedder.py  loaders.py
src/llm/: __init__.py  providers.py  router.py
src/memory/: __init__.py  cache.py  conversation.py  long_term.py
src/vectorstore/: __init__.py  collections.py  qdrant_client.py  search.py
tests/: test_agents.py  test_api.py  test_ingestion.py  test_vectorstore.py
