[project]
name = "llm-loop"
version = "0.1.0"
description = "Production-ready multi-agent RAG system — cloud-heavy, local-lightweight"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akshit Sharma" }]

dependencies = [
    # --- Core ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",

    # --- LLM & Orchestration ---
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langgraph>=0.2.0",

    # --- Embeddings (local, CPU-only) ---
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",  # CPU-only; see install note

    # --- Vector store ---
    "qdrant-client>=1.12.0",

    # --- Document loading ---
    "pypdf>=5.0.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",

    # --- Memory & Cache ---
    "redis>=5.0.0",

    # --- Text processing ---
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",

    # --- Client ---
    "streamlit>=1.39.0",

    # --- Observability ---
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]
eval = [
    "ragas>=0.2.0",
    "datasets>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"
